# leqm-nrt

./: .gitignore  AllenMetricCalculations.txt  Makefile  Makefile.am  Makefile.in  README.md  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.scan  leqm-nrt.c
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
debug/: leqm-nrt
src/: Makefile  Makefile.am  Makefile.in  leqm-nrt  leqm-nrt.c
src/.deps/: leqm-nrt.Po
